# COVyolo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
include/: ThreadPool.h  inference.h  openVION.h
model/: model.xml
model/IR_int8_1024/: last.xml  metadata.yaml
model/IR_int8_1024_Pruned/: last.xml  metadata.yaml
model/IR_int8_640/: last.xml  metadata.yaml
model/IR_int8_640_Pruned/: last.xml  metadata.yaml
src/: ThreadPool.cpp  main.cpp  openVION.cpp
